Add routes to manage terraform actions
